<resources>
    <string name="app_name">Maino2</string>
    <string name="open_nav">opened</string>
    <string name="close_nav">closed</string>
    <string name="accelerate_your_roi_with_ai_led_marketing">Accelerate your ROI with AI Led Marketing</string>
    <string name="join_the_ai_generation_revolution">Join the AI Generation Revolution</string>
    <string name="maino_empowers_companies_to_grow_smarter_and_faster_with_al_amp_ml_driven_solutions_to_scale_campaigns_across_platforms"><![CDATA[Maino empowers companies to grow smarter and faster with Al & ML driven solutions to scale campaigns across platforms.]]></string>
    <string name="book_strategy_call">Book Strategy Call</string>
    <string name="trusted_by_world_s_best_brand">Trusted By World\'s Best Brand</string>
    <string name="quick_wins_with_maino">Quick wins with Maino</string>
    <string name="_1">1</string>
    <string name="methodsecondstring">A strategic blend of cutting-edge technology and expert analysis, tailored to elevate your \n \t\t\t \t \t \t \t \t \t marketing efforts to new heights</string>
    <string name="our_methodology">Our Methodology</string>
</resources>