<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/accelerate_your_roi_with_ai_led_marketing"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/join"
                android:elevation="30dp"
                android:id="@+id/join_button"
                android:onClick="joinButtonClicked"
                android:text="@string/join_the_ai_generation_revolution"
                android:textColor="@color/white" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/maino_empowers_companies_to_grow_smarter_and_faster_with_al_amp_ml_driven_solutions_to_scale_campaigns_across_platforms"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp" />


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/book"
                android:text="@string/book_strategy_call"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="50dp" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/lottie"
                tools:ignore="MissingClass">

            </com.airbnb.lottie.LottieAnimationView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:backgroundTint="@color/black"
                android:importantForAccessibility="no"
                android:src="@drawable/divider"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/trusted_by_world_s_best_brand"
                android:textColor="@color/white"
                android:textSize="20sp" />


            <ViewFlipper
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:autoStart="true"
                android:layout_marginBottom="10dp"
                android:flipInterval="2000"
                android:inAnimation="@android:anim/slide_in_left">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/mxplayer" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/hyuga" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/cordella" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/betterway"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/brij" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/sigiq" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/truefan" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/kult" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/eight" />

            </ViewFlipper>


        </LinearLayout>
    </ScrollView>









</LinearLayout>